Changelog for dataflake.ldapconnection
======================================

0.2 (unreleased)
----------------


0.1 (2008-06-11)
----------------

Initial release.
